--- a/views/dashboard/mes-messages.ejs
+++ b/views/dashboard/mes-messages.ejs
@@ -267,10 +267,10 @@
 </style>
 
 <div class="dashboard-layout">
-    <%- include('partials/sidebar') %>
+    <%- include('../partials/sidebar') %>
     
     <main class="main-content">
-        <%- include('partials/header', { 
+        <%- include('../partials/header', { 
             pageTitle: 'Mes Messages', 
             pageIcon: '💬',
             pageSubtitle: 'Communication avec votre équipe pédagogique',
