partie etudiant presque bon

--- a/views/dashboard/etudiant.ejs
+++ b/views/dashboard/etudiant.ejs
@@ -932,7 +932,10 @@
     }
 </style>
 
+<body>
+<%- include('../partials/header') %>
 <div class="dashboard-layout">
+    
     <!-- Sidebar -->
     <aside class="sidebar" id="sidebar">
         <button class="sidebar-toggle" id="sidebarToggle">‹</button>
